--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-redux": "^8.0.5",
